<resources>
    <string name="app_name">AppNext Daily</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_issue_text">Unable to fetch data, please try again later</string>
    <string name="daily_activity">Daily Activity</string>
    <string name="be_active_be_health_set_goals">Be active. be health. Set goals.</string>
    <string name="weekly_progress">Weekly Progress</string>
    <string name="set_realistic_goals">set realistic goals</string>
    <string name="timeline">Timeline</string>
    <string name="daily_goal">Daily Goal</string>
    <string name="steps">Steps:</string>
    <string name="march_april">MARCH-APRIL</string>
</resources>
