<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.DailyFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_error_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:textColor="@color/header_title_color"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="20sp"
        android:textColor="@color/header_title_color"
        android:text="@string/daily_activity"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_daily_goal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_fragment_header_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/title_color"
        android:text="@string/daily_goal"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_daily_goal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_fragment_daily_goal_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        android:text="@string/be_active_be_health_set_goals"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <View
        android:id="@+id/daily_fragment_daily_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/daily_fragment_daily_goal_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="17dp"
        android:background="@color/divider_color"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_daily_weekly_progress_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_fragment_daily_divider"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        android:textColor="@color/title_color"
        android:text="@string/weekly_progress"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/daily_fragment_daily_weekly_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_fragment_daily_weekly_progress_title"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="12sp"
        android:textColor="@color/text_color"
        android:text="@string/set_realistic_goals"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/daily_fragment_timeline_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/daily_fragment_daily_weekly_progress_title"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="24dp"
        android:text="@string/timeline"
        android:textAllCaps="false"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/daily_fragment_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/daily_fragment_daily_weekly_progress_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/daily_fragment_ui_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="daily_fragment_chart,daily_fragment_daily_divider, daily_fragment_daily_goal_text,daily_fragment_daily_goal_title, daily_fragment_daily_weekly_progress_text,daily_fragment_daily_weekly_progress_title,daily_fragment_error_text,daily_fragment_header_title,daily_fragment_timeline_button"
        android:visibility="gone"
        tools:visibility="visible"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/daily_fragment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="?android:attr/progressBarStyleLarge"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>